--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+git+git@github.com:huggingface/transformers.git@main#egg=transformers
 absl-py==1.4.0
 aiofiles==23.1.0
 aiohttp==3.8.3
@@ -44,7 +45,7 @@ fsspec==2022.11.0
 future==0.18.2
 google-auth==2.16.2
 google-auth-oauthlib==1.0.0
-gradio==3.34.0
+gradio
 gradio_client==0.2.10
 grpcio==1.51.3
 gspread==5.10.0
@@ -166,5 +167,7 @@ yarl==1.8.2
 zipp==3.15.0
 firebase
 firebase_admin
+nltk
 gdown
 validators
+git+https://github.com/suno-ai/bark.git
