--- a/requirements.txt
+++ b/requirements.txt
@@ -27,7 +27,7 @@ Cython==0.29.30
 decorator==5.1.1
 discord.py==2.3.2
 edge-tts==6.1.5
-elevenlabs==0.2.21
+elevenlabs
 entrypoints==0.4
 exceptiongroup==1.1.3
 executing==1.2.0
