--- a/requirements.txt
+++ b/requirements.txt
@@ -169,4 +169,7 @@ firebase_admin
 nltk
 gdown
 validators
-git+https://github.com/suno-ai/bark.git
+#git+https://github.com/suno-ai/bark.git
+#tortoise-tts
+#git+https://github.com/neonbjb/tortoise-tts.git
+neon-tts-plugin-coqui==0.7.3a1
