--- a/requirements.txt
+++ b/requirements.txt
@@ -172,4 +172,4 @@ validators
 #git+https://github.com/suno-ai/bark.git
 #tortoise-tts
 #git+https://github.com/neonbjb/tortoise-tts.git
-neon-tts-plugin-coqui==0.7.3a1
+neon-tts-plugin-coqui
